Make breakpoints customizable

--- a/index.html
+++ b/index.html
@@ -9,52 +9,89 @@
 	<link rel="stylesheet" href="https://get.mavo.io/mavo.css">
 	<link rel="stylesheet" href="style.css">
 </head>
-<body mv-app="homesearch" mv-storage="https://github.com/leaverou/homesearch/homes.json" class="mv-autoedit">
+<body mv-app="homesearch" mv-source="homes.json" mv-storage="https://github.com/leaverou/homesearch/homes.json" class="mv-autoedit">
+<details id="settings">
+	<summary>Settings</summary>
 
+	<fieldset>
+		<legend>Breakpoints</legend>
+
+		<table>
+			<colgroup>
+				<col>
+				<col class="great">
+				<col class="good">
+				<col class="ok">
+				<col class="bad">
+				<col class="terrible">
+			</colgroup>
+			<thead>
+				<tr>
+					<th></th>
+					<th>Great</th>
+					<th>Good</th>
+					<th>OK</th>
+					<th>Bad</th>
+					<th>Terrible</th>
+				</tr>
+			</thead>
+			<tbody mv-list="breakpoints" mv-item-bar="none">
+				<tr mv-list-item>
+					<th scope="row" property="feature">Beds</th>
+					<td property="great">3</td>
+					<td property="good"></td>
+					<td property="ok">2</td>
+					<td property="bad">0</td>
+					<td property="terrible">1</td>
+				</tr>
+			</tbody>
+		</table>
+	</fieldset>
+</details>
 <main mv-list>
 	<article class="home" mv-list-item="home">
 		<div class="picture">
-			<a href="[url]" target="_blank">
-				<img src="" alt="" property="picture">
-				<div class="listing">🌎 <a property="url">[getWebsite(url)]</a></div>
-			</a>
+			<a href="[url]" target="_blank" class="picture mv-container"><img src="" alt="" property="picture"></a>
+			<a property="url" class="listing">[getWebsite(url)]</a>
 		</div>
 
 		<div class="all-info">
 			<div class="basic-info">
 				<div class="[if(contains(address, 'Cambridge'), 'good', 'ok')]" style="--icon: '📍';">
-					<a href="https://www.google.com/maps/search/[address]?hl=en" property="address" mv-attribute="null" target="_blank"></a>
+					<a href="https://www.google.com/maps/search/[address]?hl=en" target="_blank">
+						<address property="address"></address>
+					</a>
 				</div>
 				<div class="" style="--icon: '🚶🏽'; --append: ' to preschool'">
 					<a href="https://www.google.com/maps/dir/[address]/Capucine+Montessori+School,+Massachusetts+Avenue,+Cambridge,+MA,+USA/@42.3921544,-71.123942,17z/?hl=en" target="_blank">
 						<span property="commute"></span>
 					</a>
 				</div>
-				<div title="Beds" class="[classify(beds, terrible: 1, ok: 2, great: 3)]" style="--icon: '🛏'; --append: ' bedrooms'">
+				<div title="Beds" class="[classify(beds, breakpoints where feature = 'Beds')]" style="--icon: '🛏'; --append: ' bedrooms'">
 					<span property="beds" mv-default="2"></span>
 				</div>
-				<div title="Baths" class="[classify(baths, great: 2, good: 1.5, ok: 1)]" style="--icon: '🛁'; --append: ' bathrooms'">
+				<div title="Baths" class="[classify(baths, breakpoints where feature = 'Baths')]" style="--icon: '🛁'; --append: ' bathrooms'">
 					<span property="baths" mv-default="1"></span>
 				</div>
-				<div title="Monthly rent" class="[classify(rent, terrible: 3400, bad: 3100, ok: 2800, good: 2500, great: 0)]" style="--icon: '💰'; --prepend: '$'">
+				<div title="Monthly rent" class="[classify(rent, breakpoints where feature = 'Rent')]" style="--icon: '💰'; --prepend: '$'">
 					<span property="rent"></span>
 				</div>
-				<div title="Broker fee" class="[classify(fee, ok: 0, bad: 0.5, terrible: 1)]" style="--icon: '🤑 '; --append: ' fee'">
+				<div title="Broker fee" class="[classify(fee, breakpoints where feature = 'Fee')]" style="--icon: '🤑 '; --append: ' fee'">
 					<span property="fee" mv-options="0: No, 0.5: ½ rent, 1: 1 rent, Unknown"></span>
 				</div>
-				<div title="Area" class="[classify(area, great: 1100, ok: 900, bad: 0)]" style="--icon: '📐'; --append: ' sqft'">
+				<div title="Area" class="[classify(area, breakpoints where feature = 'Area')]" style="--icon: '📐'; --append: ' sqft'">
 					<span property="area"></span>
 				</div>
-				<div title="Laundry" class="[classify(laundry, good: 'On-site', bad: '*')]" style="--icon: '🧺'; --append: ' laundry'">
+				<div title="Laundry" class="[classify(laundry, breakpoints where feature = 'Laundry')]" style="--icon: '🧺'; --append: ' laundry'">
 					<span property="laundry" mv-options="On-site, In basement, None"></span>
 				</div>
-				<div title="Parking" class="[classify(parking, great: 'Off-street', ok: 'Street')]" style="--icon: '🚗'; --append: ' parking'">
+				<div title="Parking" class="[classify(parking, breakpoints where feature = 'Parking')]" style="--icon: '🚗'; --append: ' parking'">
 					<span property="parking" mv-options="Street, Off-street"></span>
 				</div>
-				<div title="Entrance level" class="[classify(level, ok: 1, bad: 2)]" style="--icon: '🪜';">
+				<div title="Entrance level" class="[classify(level, breakpoints where feature = 'Entrance level')]" style="--icon: '🪜';">
 					<span property="level" mv-options="1: 1st (Ground) floor, 2: 2nd floor, Unknown"></span>
 				</div>
-				<div title="Levels in home" class="[classify(levels, ok: 1, bad: 2, terrible: 3)]" style="--icon: '🏯';">
+				<div title="Levels in home" class="[classify(levels, breakpoints where feature = 'Levels in home')]" style="--icon: '🏯';">
 					<span property="levels" mv-options="1: Single-level home, 2: 2 levels, 3: 3 levels, Unknown"></span>
 				</div>
 			</div>
