--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://get.mavo.io/mavo.css">
 	<link rel="stylesheet" href="style.css">
 </head>
-<body mv-app="homesearch" mv-source="homes.json" mv-storage="https://github.com/leaverou/homesearch/homes.json" class="mv-autoedit">
+<body mv-app="homesearch" xmv-source="homes.json" mv-storage="https://github.com/leaverou/homesearch/homes.json" class="mv-autoedit">
 <details id="settings">
 	<summary>Settings</summary>
 
@@ -48,9 +48,16 @@
 		</table>
 	</fieldset>
 </details>
+<div>
+	<label>
+		<input type="checkbox" property="showRented" mv-storage="none">
+		Show rented
+	</label>
+</div>
 <main mv-list>
-	<article class="home" mv-list-item="home">
+	<article class="home [if(rented, 'rented)] [if(showRented, 'show-rented)]" mv-list-item="home">
 		<div class="picture">
+			<span property="rented" class="mv-toggle">Rented</span>
 			<a href="[url]" target="_blank" class="picture mv-container"><img src="" alt="" property="picture"></a>
 			<a property="url" class="listing">[getWebsite(url)]</a>
 		</div>
