Fix rented expressions, rented units should be at the end, even if visible

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	</label>
 </div>
 <main mv-list>
-	<article class="home [if(rented, 'rented)] [if(showRented, 'show-rented)]" mv-list-item="home">
+	<article class="home [if(rented, 'rented')] [if(showRented, 'show-rented')]" mv-list-item="home">
 		<div class="picture">
 			<span property="rented" class="mv-toggle">Rented</span>
 			<a href="[url]" target="_blank" class="picture mv-container"><img src="" alt="" property="picture"></a>
