Add levels with elevator

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<span property="parking" mv-options="Street, Off-street"></span>
 				</div>
 				<div title="Entrance level" class="[classify(level, breakpoints where feature = 'Entrance level')]" style="--icon: '🪜';">
-					<span property="level" mv-options="1: 1st (Ground) floor, 2: 2nd floor, Unknown"></span>
+					<span property="level" mv-options="1: 1st (Ground) floor, 2: 2nd floor, 2e: 2nd floor with elevator, 3e: 3rd floor with elevator, Unknown"></span>
 				</div>
 				<div title="Levels in home" class="[classify(levels, breakpoints where feature = 'Levels in home')]" style="--icon: '🏯';">
 					<span property="levels" mv-options="1: Single-level home, 2: 2 levels, 3: 3 levels, Unknown"></span>
