Add switch data button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://get.mavo.io/mavo.css">
 	<link rel="stylesheet" href="style.css">
 </head>
-<body mv-app="homesearch" xmv-source="homes.json" mv-storage="https://github.com/leaverou/homesearch/homes.json" class="mv-autoedit">
+<body mv-app="homesearch" xmv-source="homes.json" mv-storage="https://github.com/leaverou/homesearch/homes.json" class="mv-autoedit" mv-bar="with switch-data">
 <details id="settings">
 	<summary>Settings</summary>
 
